fix: scrollbars and cleanup (#21)
* fix: scrollbars

* fix: Another bunch of cleanup

--- a/css/fixup.less
+++ b/css/fixup.less
@@ -1,3 +1,7 @@
+div.plugin-bpmnio {
+    overflow: auto;
+}
+
 .plugin-bpmnio svg {
     height: 100%;
     width: 100%;
